--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cyntler/react-doc-viewer": "^1.16.6",
     "ace-builds": "^1.35.4",
     "next": "14.2.5",
     "react": "^18",
