changed pdfviewer to iframe

--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@cyntler/react-doc-viewer": "^1.16.6",
     "ace-builds": "^1.35.4",
     "next": "14.2.5",
     "react": "^18",
     "react-ace": "^12.0.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
