--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.16.0",
     "ace-builds": "^1.35.4",
+    "firebase": "^10.12.5",
     "next": "14.2.5",
     "react": "^18",
     "react-ace": "^12.0.0",
