images downloaded on server and rendered in document

--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
     "@google/generative-ai": "^0.16.0",
     "ace-builds": "^1.35.4",
     "firebase": "^10.12.5",
+    "fs": "^0.0.1-security",
     "next": "14.2.5",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-ace": "^12.0.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "tmp": "^0.2.3",
+    "util": "^0.12.5",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.14.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/tmp": "^0.2.6",
